Ajout de la classe distance

--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
         <section>
           <h2>Polytech Lille</h2>
           <p>Informatique microélectronique automatique et Génie informatique et statistique</p>
+          <p class="distance"></p>
           <a href="#" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
@@ -83,6 +84,7 @@
         <section>
           <h2>Polytech Sorbonne</h2>
           <p>Electronique et informatique, Mathématiques appliquées et informatique</p>
+          <p class="distance"></p>
           <a href="#" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
@@ -91,6 +93,7 @@
         <section>
           <h2>Polytech Paris-Sud</h2>
           <p>Electronique et systèmes robotisés, Informatique et Photonique et systèmes optroniques</p>
+          <p class="distance"></p>
           <a href="#" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
@@ -99,6 +102,7 @@
         <section>
           <h2>Polytech Nancy</h2>
           <p>Ingénierie de l’Information et des Systèmes et Internet Industriel</p>
+          <p class="distance"></p>
           <a href="#" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
@@ -107,6 +111,7 @@
         <section>
           <h2>Polytech Orleans</h2>
           <p>Ingénierie de l’Information et des Systèmes et Internet Industriel</p>
+          <p class="distance"></p>
           <a href="#" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
@@ -115,6 +120,7 @@
         <section>
           <h2>Polytech Tours</h2>
           <p>Informatique, Internet Industriel</p>
+          <p class="distance"></p>
           <a href="#" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
@@ -123,6 +129,7 @@
         <section>
           <h2>Polytech Angers</h2>
           <p>Systèmes automatisés et génie informatique</p>
+          <p class="distance"></p>
           <a href="#" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
@@ -131,6 +138,7 @@
         <section>
           <h2>Polytech Nantes</h2>
           <p>Informatique</p>
+          <p class="distance"></p>
           <a href="#" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
@@ -139,6 +147,7 @@
         <section>
           <h2>Polytech Lyon</h2>
           <p>Informatique</p>
+          <p class="distance"></p>
           <a href="#" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
@@ -147,6 +156,7 @@
         <section>
           <h2>Polytech Clermont-Ferrand</h2>
           <p>Génie mathématique et modélisation</p>
+          <p class="distance"></p>
           <a href="#" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
@@ -155,6 +165,7 @@
         <section>
           <h2>Polytech Annecy-Chambéry</h2>
           <p>Informatique, Données, Instrumentation, Automatique</p>
+          <p class="distance"></p>
           <a href="#" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
@@ -163,6 +174,7 @@
         <section>
           <h2>Polytech Grenoble</h2>
           <p>Informatique et Informatique et Electronique des Systèmes Embarqués</p>
+          <p class="distance"></p>
           <a href="#" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
@@ -171,6 +183,7 @@
         <section>
           <h2>Polytech Montpellier</h2>
           <p>Informatique et gestion et Systèmes embarqués</p>
+          <p class="distance"></p>
           <a href="#" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
@@ -179,6 +192,7 @@
         <section>
           <h2>Polytech Nice Sophia</h2>
           <p>Informatique et Informatique par apprentissage</p>
+          <p class="distance"></p>
           <a href="#" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
@@ -187,6 +201,7 @@
         <section>
           <h2>Polytech Marseille</h2>
           <p>Informatique et Génie industriel et informatique</p>
+          <p class="distance"></p>
           <a href="#" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
