--- a/index_template.html
+++ b/index_template.html
@@ -76,6 +76,7 @@
         <section>
           <h2>{{nom}}</h2>
           <p>{{descri}}</p>
+          <p class="distance"></p>
           <a href="#" class="bouttonplus">En savoir plus</a>
         </section>
       </section>
