--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-  <title>PPP IngÈnieur</title>
+  <title>PPP Ing√©nieur</title>
   <link rel="stylesheet" href="./style/main_article.css">
   <link rel="stylesheet" href="./style/main_header.css">
   <link rel="stylesheet" href="./style/navbar.css">
@@ -28,33 +28,33 @@
   <main>
     <section>
       <header>
-        <h2>AprËs un DUT, une Ècole d'ingÈ ?!</h2>
-        <p>Voil‡ la liste des meilleurs Ècoles d'ingÈnieurs de la France pour l'informatique, vous pouvez choisir entre un classement global ou afficher les Ècoles les plus proches de vous !</p>
-        <a class="button" onclick="SwitchTab('EcolesIngesTab')">…coles d'ingÈnieurs</a>
-        <a class="button" onclick="SwitchTab('DebouchesTab')">DÈbouchÈs</a>
+        <h2>Apr√®s un DUT, une √©cole d'ing√© ?!</h2>
+        <p>Voil√† la liste des meilleurs √©coles d'ing√©nieurs de la France pour l'informatique, vous pouvez choisir entre un classement global ou afficher les √©coles les plus proches de vous !</p>
+        <a href="#" class="button" onclick="SwitchTab('EcolesIngesTab')">√âcoles d'ing√©nieurs</a>
+        <a href="#" class="button" onclick="SwitchTab('DebouchesTab')">D√©bouch√©s</a>
       </header>
     </section>
     <article id="DebouchesTab" class="tabcontent" style="display: none;">
-      <h3>Les DÈbouchÈs</h3>
+      <h3>Les D√©bouch√©s</h3>
       <ul>
-        <li><a onclick="SwitchTab('EcolesIngesTab')">Les Ècoles d'ingÈnieur</a></li>
+        <li><a onclick="SwitchTab('EcolesIngesTab')">Les √©coles d'ing√©nieur</a></li>
         <li>Les licences
           <ul>
             <li><a href="https://diplomeo.com/licence-informatique">Licence informatique</a></li>
-            <li>Licence pro mÈtiers de l'informatique
+            <li>Licence pro m√©tiers de l'informatique
               <ul>
-                <li><a href="http://www.onisep.fr/Ressources/Univers-Formation/Formations/Post-bac/Licence-pro-metiers-de-l-informatique-administration-et-securite-des-systemes-et-des-reseaux">Administration et sÈcuritÈ des systËmes et des rÈseaux</a></li>
+                <li><a href="http://www.onisep.fr/Ressources/Univers-Formation/Formations/Post-bac/Licence-pro-metiers-de-l-informatique-administration-et-securite-des-systemes-et-des-reseaux">Administration et s√©curit√© des syst√®mes et des r√©seaux</a></li>
                 <li><a href="http://www.onisep.fr/Ressources/Univers-Formation/Formations/Post-bac/Licence-pro-metiers-de-l-informatique-applications-web">Applications web</a></li>
-                <li><a href="http://www.onisep.fr/Ressources/Univers-Formation/Formations/Post-bac/Licence-pro-metiers-de-l-informatique-conception-developpement-et-test-de-logiciels">Conception, dÈveloppement et test de logiciels</a></li>
+                <li><a href="http://www.onisep.fr/Ressources/Univers-Formation/Formations/Post-bac/Licence-pro-metiers-de-l-informatique-conception-developpement-et-test-de-logiciels">Conception, d√©veloppement et test de logiciels</a></li>
                 <li><a href="http://www.onisep.fr/Ressources/Univers-Formation/Formations/Post-bac/Licence-pro-metiers-de-l-informatique-conduite-de-projets">Conduite de projets</a></li>
-                <li><a href="http://www.onisep.fr/Ressources/Univers-Formation/Formations/Post-bac/Licence-pro-metiers-de-l-informatique-systemes-d-information-et-gestion-de-donnees">SystËmes d'information et gestion de donnÈes</a></li>
+                <li><a href="http://www.onisep.fr/Ressources/Univers-Formation/Formations/Post-bac/Licence-pro-metiers-de-l-informatique-systemes-d-information-et-gestion-de-donnees">Syst√®mes d'information et gestion de donn√©es</a></li>
               </ul>
             </li>
           </ul>
-          <li>Les Ècoles d'informatique
+          <li>Les √©coles d'informatique
             <ul>
               <li><a href="https://diplomeo.com/trouver-bachelor-management_des_si">management des SI</a></li>
-              <li><a href="https://diplomeo.com/trouver-bachelor-developpement_logiciel">dÈveloppement logiciel</a></li>
+              <li><a href="https://diplomeo.com/trouver-bachelor-developpement_logiciel">d√©veloppement logiciel</a></li>
               <li><a href="https://diplomeo.com/trouver-bachelor-domotique">domotique</a></li>
               <li><a href="https://diplomeo.com/trouver-bachelor-marketing_digital">marketing digital</a></li>
             </ul>
@@ -73,8 +73,179 @@
             <section class="responsive">
         <img src="iut.jpg" alt="">
         <section>
+          <h2>Ensimag</h2>
+          <p>Informatique et de math√©matiques appliqu√©es</p>
+          <p class="distance"></p>
+          <a href="#" class="bouttonplus">En savoir plus</a>
+        </section>
+      </section>
+            <section class="responsive">
+        <img src="iut.jpg" alt="">
+        <section>
+          <h2>Ecole 42</h2>
+          <p>Formation de d√©veloppeurs informatiques</p>
+          <p class="distance"></p>
+          <a href="#" class="bouttonplus">En savoir plus</a>
+        </section>
+      </section>
+            <section class="responsive">
+        <img src="iut.jpg" alt="">
+        <section>
+          <h2>Ecole normale sup√©rieure</h2>
+          <p>Informatique</p>
+          <p class="distance"></p>
+          <a href="#" class="bouttonplus">En savoir plus</a>
+        </section>
+      </section>
+            <section class="responsive">
+        <img src="iut.jpg" alt="">
+        <section>
+          <h2>Insa Toulouse</h2>
+          <p>Informatique et R√©seaux</p>
+          <p class="distance"></p>
+          <a href="#" class="bouttonplus">En savoir plus</a>
+        </section>
+      </section>
+            <section class="responsive">
+        <img src="iut.jpg" alt="">
+        <section>
+          <h2>ENSEEIHT</h2>
+          <p>Informatique et de math√©matiques appliqu√©es</p>
+          <p class="distance"></p>
+          <a href="#" class="bouttonplus">En savoir plus</a>
+        </section>
+      </section>
+            <section class="responsive">
+        <img src="iut.jpg" alt="">
+        <section>
+          <h2>Centrale Sup√©lec</h2>
+          <p>Informatique et de math√©matiques appliqu√©es</p>
+          <p class="distance"></p>
+          <a href="#" class="bouttonplus">En savoir plus</a>
+        </section>
+      </section>
+            <section class="responsive">
+        <img src="iut.jpg" alt="">
+        <section>
+          <h2>Universit√© Pierre et Marie Curie</h2>
+          <p>Informatique et de math√©matiques appliqu√©es</p>
+          <p class="distance"></p>
+          <a href="#" class="bouttonplus">En savoir plus</a>
+        </section>
+      </section>
+            <section class="responsive">
+        <img src="iut.jpg" alt="">
+        <section>
+          <h2>T√©l√©com-Paristech</h2>
+          <p>Informatique et r√©seaux</p>
+          <p class="distance"></p>
+          <a href="#" class="bouttonplus">En savoir plus</a>
+        </section>
+      </section>
+            <section class="responsive">
+        <img src="iut.jpg" alt="">
+        <section>
+          <h2>Isima</h2>
+          <p>Informatique des syst√®mes embarqu√©s et G√©nie logiciel et Syst√®mes informatiques et Syst√®mes d‚Äôinformation et Aide √† la d√©cision et Mod√©lisation math√©matique et Science des donn√©es et R√©seaux et s√©curit√© informatique</p>
+          <p class="distance"></p>
+          <a href="#" class="bouttonplus">En savoir plus</a>
+        </section>
+      </section>
+            <section class="responsive">
+        <img src="iut.jpg" alt="">
+        <section>
+          <h2>Universit√© Paul Sabatier</h2>
+          <p>Informatique et de math√©matiques appliqu√©es</p>
+          <p class="distance"></p>
+          <a href="#" class="bouttonplus">En savoir plus</a>
+        </section>
+      </section>
+            <section class="responsive">
+        <img src="iut.jpg" alt="">
+        <section>
+          <h2>T√©l√©com Nancy</h2>
+          <p>Big DATA, IoT, Cyber S√©curit√©, IA, R√©alit√© Virtuelle, Cloud</p>
+          <p class="distance"></p>
+          <a href="#" class="bouttonplus">En savoir plus</a>
+        </section>
+      </section>
+            <section class="responsive">
+        <img src="iut.jpg" alt="">
+        <section>
+          <h2>Epita</h2>
+          <p>Syst√®me et R√©seaux et D√©veloppement, Programmation et lot</p>
+          <p class="distance"></p>
+          <a href="#" class="bouttonplus">En savoir plus</a>
+        </section>
+      </section>
+            <section class="responsive">
+        <img src="iut.jpg" alt="">
+        <section>
+          <h2>Isae - Supa√©ro</h2>
+          <p>Informatique</p>
+          <p class="distance"></p>
+          <a href="#" class="bouttonplus">En savoir plus</a>
+        </section>
+      </section>
+            <section class="responsive">
+        <img src="iut.jpg" alt="">
+        <section>
+          <h2>Insa Lyon</h2>
+          <p>Informatique, Syst√®me et R√©seaux, Math√©matiques appliqu√©es</p>
+          <p class="distance"></p>
+          <a href="#" class="bouttonplus">En savoir plus</a>
+        </section>
+      </section>
+            <section class="responsive">
+        <img src="iut.jpg" alt="">
+        <section>
+          <h2>ENSIIE</h2>
+          <p>Informatique</p>
+          <p class="distance"></p>
+          <a href="#" class="bouttonplus">En savoir plus</a>
+        </section>
+      </section>
+            <section class="responsive">
+        <img src="iut.jpg" alt="">
+        <section>
+          <h2>Universit√© Paris Sud</h2>
+          <p>Informatique</p>
+          <p class="distance"></p>
+          <a href="#" class="bouttonplus">En savoir plus</a>
+        </section>
+      </section>
+            <section class="responsive">
+        <img src="iut.jpg" alt="">
+        <section>
+          <h2>Efrei</h2>
+          <p>Informatique</p>
+          <p class="distance"></p>
+          <a href="#" class="bouttonplus">En savoir plus</a>
+        </section>
+      </section>
+            <section class="responsive">
+        <img src="iut.jpg" alt="">
+        <section>
+          <h2>Enseirb-Matmeca</h2>
+          <p>Calcul intensif et sciences de donn√©es, robotique et apprentissage, intelligence artificielle, g√©nie logiciel et cybers√©curit√©</p>
+          <p class="distance"></p>
+          <a href="#" class="bouttonplus">En savoir plus</a>
+        </section>
+      </section>
+            <section class="responsive">
+        <img src="iut.jpg" alt="">
+        <section>
+          <h2>Universit√© Claude Bernard</h2>
+          <p>Informatique</p>
+          <p class="distance"></p>
+          <a href="#" class="bouttonplus">En savoir plus</a>
+        </section>
+      </section>
+            <section class="responsive">
+        <img src="iut.jpg" alt="">
+        <section>
           <h2>Polytech Lille</h2>
-          <p>Informatique microÈlectronique automatique et GÈnie informatique et statistique</p>
+          <p>Informatique micro√©lectronique automatique et G√©nie informatique et statistique</p>
           <p class="distance"></p>
           <a href="#" class="bouttonplus">En savoir plus</a>
         </section>
@@ -83,7 +254,7 @@
         <img src="iut.jpg" alt="">
         <section>
           <h2>Polytech Sorbonne</h2>
-          <p>Electronique et informatique, MathÈmatiques appliquÈes et informatique</p>
+          <p>Electronique et informatique, Math√©matiques appliqu√©es et informatique</p>
           <p class="distance"></p>
           <a href="#" class="bouttonplus">En savoir plus</a>
         </section>
@@ -92,7 +263,7 @@
         <img src="iut.jpg" alt="">
         <section>
           <h2>Polytech Paris-Sud</h2>
-          <p>Electronique et systËmes robotisÈs, Informatique et Photonique et systËmes optroniques</p>
+          <p>Electronique et syst√®mes robotis√©s, Informatique et Photonique et syst√®mes optroniques</p>
           <p class="distance"></p>
           <a href="#" class="bouttonplus">En savoir plus</a>
         </section>
@@ -101,7 +272,7 @@
         <img src="iut.jpg" alt="">
         <section>
           <h2>Polytech Nancy</h2>
-          <p>IngÈnierie de líInformation et des SystËmes et Internet Industriel</p>
+          <p>Ing√©nierie de l‚ÄôInformation et des Syst√®mes et Internet Industriel</p>
           <p class="distance"></p>
           <a href="#" class="bouttonplus">En savoir plus</a>
         </section>
@@ -110,7 +281,7 @@
         <img src="iut.jpg" alt="">
         <section>
           <h2>Polytech Orleans</h2>
-          <p>IngÈnierie de líInformation et des SystËmes et Internet Industriel</p>
+          <p>Ing√©nierie de l‚ÄôInformation et des Syst√®mes et Internet Industriel</p>
           <p class="distance"></p>
           <a href="#" class="bouttonplus">En savoir plus</a>
         </section>
@@ -128,7 +299,7 @@
         <img src="iut.jpg" alt="">
         <section>
           <h2>Polytech Angers</h2>
-          <p>SystËmes automatisÈs et gÈnie informatique</p>
+          <p>Syst√®mes automatis√©s et g√©nie informatique</p>
           <p class="distance"></p>
           <a href="#" class="bouttonplus">En savoir plus</a>
         </section>
@@ -155,7 +326,7 @@
         <img src="iut.jpg" alt="">
         <section>
           <h2>Polytech Clermont-Ferrand</h2>
-          <p>GÈnie mathÈmatique et modÈlisation</p>
+          <p>G√©nie math√©matique et mod√©lisation</p>
           <p class="distance"></p>
           <a href="#" class="bouttonplus">En savoir plus</a>
         </section>
@@ -163,8 +334,8 @@
             <section class="responsive">
         <img src="iut.jpg" alt="">
         <section>
-          <h2>Polytech Annecy-ChambÈry</h2>
-          <p>Informatique, DonnÈes, Instrumentation, Automatique</p>
+          <h2>Polytech Annecy-Chamb√©ry</h2>
+          <p>Informatique, Donn√©es, Usages, Instrumentation - Automatique - Informatique</p>
           <p class="distance"></p>
           <a href="#" class="bouttonplus">En savoir plus</a>
         </section>
@@ -173,7 +344,7 @@
         <img src="iut.jpg" alt="">
         <section>
           <h2>Polytech Grenoble</h2>
-          <p>Informatique et Informatique et Electronique des SystËmes EmbarquÈs</p>
+          <p>Informatique et Informatique et Electronique des Syst√®mes Embarqu√©s</p>
           <p class="distance"></p>
           <a href="#" class="bouttonplus">En savoir plus</a>
         </section>
@@ -182,7 +353,7 @@
         <img src="iut.jpg" alt="">
         <section>
           <h2>Polytech Montpellier</h2>
-          <p>Informatique et gestion et SystËmes embarquÈs</p>
+          <p>Informatique et gestion et Syst√®mes embarqu√©s</p>
           <p class="distance"></p>
           <a href="#" class="bouttonplus">En savoir plus</a>
         </section>
@@ -200,7 +371,7 @@
         <img src="iut.jpg" alt="">
         <section>
           <h2>Polytech Marseille</h2>
-          <p>Informatique et GÈnie industriel et informatique</p>
+          <p>Informatique et G√©nie industriel et informatique</p>
           <p class="distance"></p>
           <a href="#" class="bouttonplus">En savoir plus</a>
         </section>
@@ -209,14 +380,14 @@
   </main>
   <footer>
     <section class="apropos">
-      <h2>¿ Propos</h2>
-      <p>Cette page a ÈtÈ crÈÈe dans le cadre de la crÈation d'une page web pouvant fournir les informations nÈcessaires ‡ des Ètudiants possedant un DUT informatique de trouver la meilleur Ècoles d'ingÈnieur selon leur localisation ou le classement de celle-ci</p>
+      <h2>√Ä Propos</h2>
+      <p>Cette page a √©t√© cr√©√©e dans le cadre de la cr√©ation d'une page web pouvant fournir les informations n√©cessaires √† des √©tudiants possedant un DUT informatique de trouver la meilleur √©coles d'ing√©nieur selon leur localisation ou le classement de celle-ci</p>
     </section>
     <section class="contact">
       <h2>Contact</h2>
       <ul>
         <li><a href="#">Site de l'IUT ></a></li>
-        <li><a href="#">Site de l'universitÈ ></a></li>
+        <li><a href="#">Site de l'universit√© ></a></li>
       </ul>
     </section>
   </footer>
