--- a/index_template.html
+++ b/index_template.html
@@ -30,8 +30,8 @@
       <header>
         <h2>Après un DUT, une école d'ingé ?!</h2>
         <p>Voilà la liste des meilleurs écoles d'ingénieurs de la France pour l'informatique, vous pouvez choisir entre un classement global ou afficher les écoles les plus proches de vous !</p>
-        <a class="button" onclick="SwitchTab('EcolesIngesTab')">Écoles d'ingénieurs</a>
-        <a class="button" onclick="SwitchTab('DebouchesTab')">Débouchés</a>
+        <a href="#" class="button" onclick="SwitchTab('EcolesIngesTab')">Écoles d'ingénieurs</a>
+        <a href="#" class="button" onclick="SwitchTab('DebouchesTab')">Débouchés</a>
       </header>
     </section>
     <article id="DebouchesTab" class="tabcontent" style="display: none;">
