update bd écoles

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-  <title>PPP IngÃ©nieur</title>
+  <title>PPP Ingénieur</title>
   <link rel="stylesheet" href="./style/main_article.css">
   <link rel="stylesheet" href="./style/main_header.css">
   <link rel="stylesheet" href="./style/navbar.css">
@@ -28,33 +28,33 @@
   <main>
     <section>
       <header>
-        <h2>AprÃ¨s un DUT, une Ã©cole d'ingÃ© ?!</h2>
-        <p>VoilÃ  la liste des meilleurs Ã©coles d'ingÃ©nieurs de la France pour l'informatique, vous pouvez choisir entre un classement global ou afficher les Ã©coles les plus proches de vous !</p>
-        <a href="#" class="button" onclick="SwitchTab('EcolesIngesTab')">Ã‰coles d'ingÃ©nieurs</a>
-        <a href="#" class="button" onclick="SwitchTab('DebouchesTab')">DÃ©bouchÃ©s</a>
+        <h2>Après un DUT, une école d'ingé ?!</h2>
+        <p>Voilà la liste des meilleurs écoles d'ingénieurs de la France pour l'informatique, vous pouvez choisir entre un classement global ou afficher les écoles les plus proches de vous !</p>
+        <a href="#" class="button" onclick="SwitchTab('EcolesIngesTab')">Écoles d'ingénieurs</a>
+        <a href="#" class="button" onclick="SwitchTab('DebouchesTab')">Débouchés</a>
       </header>
     </section>
     <article id="DebouchesTab" class="tabcontent" style="display: none;">
-      <h3>Les DÃ©bouchÃ©s</h3>
+      <h3>Les Débouchés</h3>
       <ul>
-        <li><a onclick="SwitchTab('EcolesIngesTab')">Les Ã©coles d'ingÃ©nieur</a></li>
+        <li><a onclick="SwitchTab('EcolesIngesTab')">Les écoles d'ingénieur</a></li>
         <li>Les licences
           <ul>
             <li><a href="https://diplomeo.com/licence-informatique">Licence informatique</a></li>
-            <li>Licence pro mÃ©tiers de l'informatique
+            <li>Licence pro métiers de l'informatique
               <ul>
-                <li><a href="http://www.onisep.fr/Ressources/Univers-Formation/Formations/Post-bac/Licence-pro-metiers-de-l-informatique-administration-et-securite-des-systemes-et-des-reseaux">Administration et sÃ©curitÃ© des systÃ¨mes et des rÃ©seaux</a></li>
+                <li><a href="http://www.onisep.fr/Ressources/Univers-Formation/Formations/Post-bac/Licence-pro-metiers-de-l-informatique-administration-et-securite-des-systemes-et-des-reseaux">Administration et sécurité des systèmes et des réseaux</a></li>
                 <li><a href="http://www.onisep.fr/Ressources/Univers-Formation/Formations/Post-bac/Licence-pro-metiers-de-l-informatique-applications-web">Applications web</a></li>
-                <li><a href="http://www.onisep.fr/Ressources/Univers-Formation/Formations/Post-bac/Licence-pro-metiers-de-l-informatique-conception-developpement-et-test-de-logiciels">Conception, dÃ©veloppement et test de logiciels</a></li>
+                <li><a href="http://www.onisep.fr/Ressources/Univers-Formation/Formations/Post-bac/Licence-pro-metiers-de-l-informatique-conception-developpement-et-test-de-logiciels">Conception, développement et test de logiciels</a></li>
                 <li><a href="http://www.onisep.fr/Ressources/Univers-Formation/Formations/Post-bac/Licence-pro-metiers-de-l-informatique-conduite-de-projets">Conduite de projets</a></li>
-                <li><a href="http://www.onisep.fr/Ressources/Univers-Formation/Formations/Post-bac/Licence-pro-metiers-de-l-informatique-systemes-d-information-et-gestion-de-donnees">SystÃ¨mes d'information et gestion de donnÃ©es</a></li>
+                <li><a href="http://www.onisep.fr/Ressources/Univers-Formation/Formations/Post-bac/Licence-pro-metiers-de-l-informatique-systemes-d-information-et-gestion-de-donnees">Systèmes d'information et gestion de données</a></li>
               </ul>
             </li>
           </ul>
-          <li>Les Ã©coles d'informatique
+          <li>Les écoles d'informatique
             <ul>
               <li><a href="https://diplomeo.com/trouver-bachelor-management_des_si">management des SI</a></li>
-              <li><a href="https://diplomeo.com/trouver-bachelor-developpement_logiciel">dÃ©veloppement logiciel</a></li>
+              <li><a href="https://diplomeo.com/trouver-bachelor-developpement_logiciel">développement logiciel</a></li>
               <li><a href="https://diplomeo.com/trouver-bachelor-domotique">domotique</a></li>
               <li><a href="https://diplomeo.com/trouver-bachelor-marketing_digital">marketing digital</a></li>
             </ul>
@@ -74,7 +74,7 @@
         <img src="iut.jpg" alt="">
         <section>
           <h2>Ensimag</h2>
-          <p>Informatique et de mathÃ©matiques appliquÃ©es</p>
+          <p>Informatique et de mathématiques appliquées</p>
           <p class="distance"></p>
           <a href="#" class="bouttonplus">En savoir plus</a>
         </section>
@@ -83,7 +83,7 @@
         <img src="iut.jpg" alt="">
         <section>
           <h2>Ecole 42</h2>
-          <p>Formation de dÃ©veloppeurs informatiques</p>
+          <p>Formation de développeurs informatiques</p>
           <p class="distance"></p>
           <a href="#" class="bouttonplus">En savoir plus</a>
         </section>
@@ -91,7 +91,7 @@
             <section class="responsive">
         <img src="iut.jpg" alt="">
         <section>
-          <h2>Ecole normale supÃ©rieure</h2>
+          <h2>Ecole normale supérieure</h2>
           <p>Informatique</p>
           <p class="distance"></p>
           <a href="#" class="bouttonplus">En savoir plus</a>
@@ -101,7 +101,7 @@
         <img src="iut.jpg" alt="">
         <section>
           <h2>Insa Toulouse</h2>
-          <p>Informatique et RÃ©seaux</p>
+          <p>Informatique et Réseaux</p>
           <p class="distance"></p>
           <a href="#" class="bouttonplus">En savoir plus</a>
         </section>
@@ -110,7 +110,7 @@
         <img src="iut.jpg" alt="">
         <section>
           <h2>ENSEEIHT</h2>
-          <p>Informatique et de mathÃ©matiques appliquÃ©es</p>
+          <p>Informatique et de mathématiques appliquées</p>
           <p class="distance"></p>
           <a href="#" class="bouttonplus">En savoir plus</a>
         </section>
@@ -118,8 +118,8 @@
             <section class="responsive">
         <img src="iut.jpg" alt="">
         <section>
-          <h2>Centrale SupÃ©lec</h2>
-          <p>Informatique et de mathÃ©matiques appliquÃ©es</p>
+          <h2>Centrale Supélec</h2>
+          <p>Informatique et de mathématiques appliquées</p>
           <p class="distance"></p>
           <a href="#" class="bouttonplus">En savoir plus</a>
         </section>
@@ -127,8 +127,8 @@
             <section class="responsive">
         <img src="iut.jpg" alt="">
         <section>
-          <h2>UniversitÃ© Pierre et Marie Curie</h2>
-          <p>Informatique et de mathÃ©matiques appliquÃ©es</p>
+          <h2>Université Pierre et Marie Curie</h2>
+          <p>Informatique et de mathématiques appliquées</p>
           <p class="distance"></p>
           <a href="#" class="bouttonplus">En savoir plus</a>
         </section>
@@ -136,8 +136,8 @@
             <section class="responsive">
         <img src="iut.jpg" alt="">
         <section>
-          <h2>TÃ©lÃ©com-Paristech</h2>
-          <p>Informatique et rÃ©seaux</p>
+          <h2>Télécom-Paristech</h2>
+          <p>Informatique et réseaux</p>
           <p class="distance"></p>
           <a href="#" class="bouttonplus">En savoir plus</a>
         </section>
@@ -146,7 +146,7 @@
         <img src="iut.jpg" alt="">
         <section>
           <h2>Isima</h2>
-          <p>Informatique des systÃ¨mes embarquÃ©s et GÃ©nie logiciel et SystÃ¨mes informatiques et SystÃ¨mes dâ€™information et Aide Ã  la dÃ©cision et ModÃ©lisation mathÃ©matique et Science des donnÃ©es et RÃ©seaux et sÃ©curitÃ© informatique</p>
+          <p>Informatique des systèmes embarqués et Génie logiciel et Systèmes informatiques et Systèmes d’information et Aide à la décision et Modélisation mathématique et Science des données et Réseaux et sécurité informatique</p>
           <p class="distance"></p>
           <a href="#" class="bouttonplus">En savoir plus</a>
         </section>
@@ -154,8 +154,8 @@
             <section class="responsive">
         <img src="iut.jpg" alt="">
         <section>
-          <h2>UniversitÃ© Paul Sabatier</h2>
-          <p>Informatique et de mathÃ©matiques appliquÃ©es</p>
+          <h2>Université Paul Sabatier</h2>
+          <p>Informatique et de mathématiques appliquées</p>
           <p class="distance"></p>
           <a href="#" class="bouttonplus">En savoir plus</a>
         </section>
@@ -163,8 +163,8 @@
             <section class="responsive">
         <img src="iut.jpg" alt="">
         <section>
-          <h2>TÃ©lÃ©com Nancy</h2>
-          <p>Big DATA, IoT, Cyber SÃ©curitÃ©, IA, RÃ©alitÃ© Virtuelle, Cloud</p>
+          <h2>Télécom Nancy</h2>
+          <p>Big DATA, IoT, Cyber Sécurité, IA, Réalité Virtuelle, Cloud</p>
           <p class="distance"></p>
           <a href="#" class="bouttonplus">En savoir plus</a>
         </section>
@@ -173,7 +173,7 @@
         <img src="iut.jpg" alt="">
         <section>
           <h2>Epita</h2>
-          <p>SystÃ¨me et RÃ©seaux et DÃ©veloppement, Programmation et lot</p>
+          <p>Système et Réseaux et Développement, Programmation et lot</p>
           <p class="distance"></p>
           <a href="#" class="bouttonplus">En savoir plus</a>
         </section>
@@ -181,7 +181,7 @@
             <section class="responsive">
         <img src="iut.jpg" alt="">
         <section>
-          <h2>Isae - SupaÃ©ro</h2>
+          <h2>Isae - Supaéro</h2>
           <p>Informatique</p>
           <p class="distance"></p>
           <a href="#" class="bouttonplus">En savoir plus</a>
@@ -191,7 +191,7 @@
         <img src="iut.jpg" alt="">
         <section>
           <h2>Insa Lyon</h2>
-          <p>Informatique, SystÃ¨me et RÃ©seaux, MathÃ©matiques appliquÃ©es</p>
+          <p>Informatique, Système et Réseaux, Mathématiques appliquées</p>
           <p class="distance"></p>
           <a href="#" class="bouttonplus">En savoir plus</a>
         </section>
@@ -208,7 +208,7 @@
             <section class="responsive">
         <img src="iut.jpg" alt="">
         <section>
-          <h2>UniversitÃ© Paris Sud</h2>
+          <h2>Université Paris Sud</h2>
           <p>Informatique</p>
           <p class="distance"></p>
           <a href="#" class="bouttonplus">En savoir plus</a>
@@ -227,7 +227,7 @@
         <img src="iut.jpg" alt="">
         <section>
           <h2>Enseirb-Matmeca</h2>
-          <p>Calcul intensif et sciences de donnÃ©es, robotique et apprentissage, intelligence artificielle, gÃ©nie logiciel et cybersÃ©curitÃ©</p>
+          <p>Calcul intensif et sciences de données, robotique et apprentissage, intelligence artificielle, génie logiciel et cybersécurité</p>
           <p class="distance"></p>
           <a href="#" class="bouttonplus">En savoir plus</a>
         </section>
@@ -235,7 +235,7 @@
             <section class="responsive">
         <img src="iut.jpg" alt="">
         <section>
-          <h2>UniversitÃ© Claude Bernard</h2>
+          <h2>Université Claude Bernard</h2>
           <p>Informatique</p>
           <p class="distance"></p>
           <a href="#" class="bouttonplus">En savoir plus</a>
@@ -245,7 +245,7 @@
         <img src="iut.jpg" alt="">
         <section>
           <h2>Polytech Lille</h2>
-          <p>Informatique microÃ©lectronique automatique et GÃ©nie informatique et statistique</p>
+          <p>Informatique microélectronique automatique et Génie informatique et statistique</p>
           <p class="distance"></p>
           <a href="#" class="bouttonplus">En savoir plus</a>
         </section>
@@ -254,7 +254,7 @@
         <img src="iut.jpg" alt="">
         <section>
           <h2>Polytech Sorbonne</h2>
-          <p>Electronique et informatique, MathÃ©matiques appliquÃ©es et informatique</p>
+          <p>Electronique et informatique, Mathématiques appliquées et informatique</p>
           <p class="distance"></p>
           <a href="#" class="bouttonplus">En savoir plus</a>
         </section>
@@ -263,7 +263,7 @@
         <img src="iut.jpg" alt="">
         <section>
           <h2>Polytech Paris-Sud</h2>
-          <p>Electronique et systÃ¨mes robotisÃ©s, Informatique et Photonique et systÃ¨mes optroniques</p>
+          <p>Electronique et systèmes robotisés, Informatique et Photonique et systèmes optroniques</p>
           <p class="distance"></p>
           <a href="#" class="bouttonplus">En savoir plus</a>
         </section>
@@ -272,7 +272,7 @@
         <img src="iut.jpg" alt="">
         <section>
           <h2>Polytech Nancy</h2>
-          <p>IngÃ©nierie de lâ€™Information et des SystÃ¨mes et Internet Industriel</p>
+          <p>Ingénierie de l’Information et des Systèmes et Internet Industriel</p>
           <p class="distance"></p>
           <a href="#" class="bouttonplus">En savoir plus</a>
         </section>
@@ -281,7 +281,7 @@
         <img src="iut.jpg" alt="">
         <section>
           <h2>Polytech Orleans</h2>
-          <p>IngÃ©nierie de lâ€™Information et des SystÃ¨mes et Internet Industriel</p>
+          <p>Ingénierie de l’Information et des Systèmes et Internet Industriel</p>
           <p class="distance"></p>
           <a href="#" class="bouttonplus">En savoir plus</a>
         </section>
@@ -299,7 +299,7 @@
         <img src="iut.jpg" alt="">
         <section>
           <h2>Polytech Angers</h2>
-          <p>SystÃ¨mes automatisÃ©s et gÃ©nie informatique</p>
+          <p>Systèmes automatisés et génie informatique</p>
           <p class="distance"></p>
           <a href="#" class="bouttonplus">En savoir plus</a>
         </section>
@@ -326,7 +326,7 @@
         <img src="iut.jpg" alt="">
         <section>
           <h2>Polytech Clermont-Ferrand</h2>
-          <p>GÃ©nie mathÃ©matique et modÃ©lisation</p>
+          <p>Génie mathématique et modélisation</p>
           <p class="distance"></p>
           <a href="#" class="bouttonplus">En savoir plus</a>
         </section>
@@ -334,8 +334,8 @@
             <section class="responsive">
         <img src="iut.jpg" alt="">
         <section>
-          <h2>Polytech Annecy-ChambÃ©ry</h2>
-          <p>Informatique, DonnÃ©es, Usages, Instrumentation - Automatique - Informatique</p>
+          <h2>Polytech Annecy-Chambéry</h2>
+          <p>Informatique, Données, Usages, Instrumentation - Automatique - Informatique</p>
           <p class="distance"></p>
           <a href="#" class="bouttonplus">En savoir plus</a>
         </section>
@@ -344,7 +344,7 @@
         <img src="iut.jpg" alt="">
         <section>
           <h2>Polytech Grenoble</h2>
-          <p>Informatique et Informatique et Electronique des SystÃ¨mes EmbarquÃ©s</p>
+          <p>Informatique et Informatique et Electronique des Systèmes Embarqués</p>
           <p class="distance"></p>
           <a href="#" class="bouttonplus">En savoir plus</a>
         </section>
@@ -353,7 +353,7 @@
         <img src="iut.jpg" alt="">
         <section>
           <h2>Polytech Montpellier</h2>
-          <p>Informatique et gestion et SystÃ¨mes embarquÃ©s</p>
+          <p>Informatique et gestion et Systèmes embarqués</p>
           <p class="distance"></p>
           <a href="#" class="bouttonplus">En savoir plus</a>
         </section>
@@ -371,7 +371,7 @@
         <img src="iut.jpg" alt="">
         <section>
           <h2>Polytech Marseille</h2>
-          <p>Informatique et GÃ©nie industriel et informatique</p>
+          <p>Informatique et Génie industriel et informatique</p>
           <p class="distance"></p>
           <a href="#" class="bouttonplus">En savoir plus</a>
         </section>
@@ -380,14 +380,14 @@
   </main>
   <footer>
     <section class="apropos">
-      <h2>Ã€ Propos</h2>
-      <p>Cette page a Ã©tÃ© crÃ©Ã©e dans le cadre de la crÃ©ation d'une page web pouvant fournir les informations nÃ©cessaires Ã  des Ã©tudiants possedant un DUT informatique de trouver la meilleur Ã©coles d'ingÃ©nieur selon leur localisation ou le classement de celle-ci</p>
+      <h2>À Propos</h2>
+      <p>Cette page a été créée dans le cadre de la création d'une page web pouvant fournir les informations nécessaires à des étudiants possedant un DUT informatique de trouver la meilleur écoles d'ingénieur selon leur localisation ou le classement de celle-ci</p>
     </section>
     <section class="contact">
       <h2>Contact</h2>
       <ul>
         <li><a href="#">Site de l'IUT ></a></li>
-        <li><a href="#">Site de l'universitÃ© ></a></li>
+        <li><a href="#">Site de l'université ></a></li>
       </ul>
     </section>
   </footer>
